# audio_share

./: .env  .gitignore  Cargo.toml  Makefile  Pyproject.toml  test.py
common/ffmpeg/include/libavutil/: ffversion.h
src/: app.py  client.py  constants.py  depricated_client.py  injectors.py  main.py  main.rs  models.py  mp3_handles.py  new_client.py  new_server.py  ref.py  server.py  utils.py
src/handles/audio/: audio_playback.py  audio_transfer.py  audio_utils.py  player.py
src/handles/input/: commands.py  userinput.py
src/handles/peers/: connection_manager.py  peer_handler.py  peer_utils.py  peers_utils.py
src/handles/user_input/: user_input.py
