[package]
name = "experimental"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.19.0"
public-ip = "0.2.2"
tokio = { version = "1.38.0",  features = ["full"] }

[[bin]]
name = "experimental"
path = "src/main.rs"
